prettier Facebook login button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Flexiprocity</title>
+        <link rel="stylesheet" href="main.css">
         <script type="text/javascript" src="elm.js"></script>
     </head>
     <body>
