--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Flexiprocity</title>
+        <title>flexiprocity</title>
         <link rel="stylesheet" href="main.css">
         <script type="text/javascript" src="elm.js"></script>
     </head>
     <body>
         <script type="text/javascript" src="driver.js">
         <p>
-            Flexiprocity needs JavaScript; if you're seeing this then running
+            flexiprocity needs JavaScript; if you're seeing this then running
             the script failed or was blocked (or isn't done yet?)
         </p>
         </script>
