--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>flexiprocity</title>
         <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="dark.css">
+        <link rel="stylesheet" media="not (prefers-color-scheme: dark)" href="light.css">
         <script type="text/javascript" src="elm.js"></script>
     </head>
     <body>
