--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="dark.css">
         <link rel="stylesheet" media="not (prefers-color-scheme: dark)" href="light.css">
+        <script type="text/javascript" src="sentry.js" crossorigin="anonymous"></script>
         <script type="text/javascript" src="elm.js"></script>
     </head>
     <body>
