some branding I missed earlier

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>flexiprocity</title>
+        <title>reciprocity</title>
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="dark.css">
         <link rel="stylesheet" media="not (prefers-color-scheme: dark)" href="light.css">
@@ -12,7 +12,7 @@
     <body>
         <script type="text/javascript" src="driver.js">
         <p>
-            flexiprocity needs JavaScript; if you're seeing this then running
+            reciprocity needs JavaScript; if you're seeing this then running
             the script failed or was blocked (or isn't done yet?)
         </p>
         </script>
