privacy policy update mechanism
This has a number of problems:
- should try to figure out how to show you a diff
- should avoid sending your data before you've agreed to the policy
- should not allow you to attempt to submit if you're not logged in to
  the API

Nevertheless, it's a start.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="elm.js"></script>
     </head>
     <body>
+        <script type="text/javascript" src="version.js"></script>
         <script type="text/javascript" src="driver.js">
         <p>
             reciprocity needs JavaScript; if you're seeing this then running
